--- a/xenon/pom.xml
+++ b/xenon/pom.xml
@@ -8,11 +8,11 @@
         <version>3.4.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.xenonvita</groupId>
-    <artifactId>xenonvita</artifactId>
+    <groupId>com.xenon</groupId>
+    <artifactId>xenon</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>xenonvita</name>
-    <description>xenonvita</description>
+    <name>xenon</name>
+    <description>xenon</description>
     <url/>
     <licenses>
         <license/>
@@ -74,6 +74,8 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <finalName>${project.artifactId}</finalName>
     </build>
 
 </project>
